Fixed played cards spacing

--- a/src/components/PlayedCards/PlayedCards.module.css
+++ b/src/components/PlayedCards/PlayedCards.module.css
@@ -1,6 +1,4 @@
 .playedCards {
-    width: 100%;
-    height: 100%;
     display: flex;
 }
 
